# robot_framework_code_base_template

./: .gitignore  CONTRIBUTING.md  README.md  example.env  generate_docs.py  init.sql  init_db.py  make_install.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml  pipeline_pull_request.yml  pipeline_push.yml
documentation/: index.html
documentation/keywords/: Common.keywords.html  Data.keywords.html  DataBase.keywords.html  Json.keywords.html  XML.keywords.html
documentation/keywords/Book_Store/: bookStore.keywords.html
documentation/libraries/: CompareTwoImages.html  DotEnv.html  Files.html  ReadJson.html
resources/: config_variables.py
resources/files/i18n/: ar.json  co.json  mx.json  page_pt.json  pt.json
resources/keywords/: BrowserContext.keywords.resource  Collections_Utils.keywords.resource  Common.keywords.resource  Common.resource  Data.keywords.resource  DataBase.keywords.resource  DataBase.resource  FileSystem.keywords.resource  Json.keywords.resource  Strings.keywords.resource  Utils.keywords.resource  XML.keywords.resource
resources/keywords/Book_Store/: bookStore.keywords.resource
resources/keywords/core/: BrowserContext.keywords.resource  (+8 more)
resources/libraries/: CollectionsHelper.py  CompareTwoImages.py  DotEnv.py  Files.py  ReadJson.py  test_coverage_validator.py
results/: log.html  output.xml  report.html
tests/: __init__.robot  data.robot  mobile.robot  test.robot  web.robot
tests/Examples/: api.robot  common.robot  data.robot  database.robot  mobile.robot  web.robot
tools/: generate_docs.py  make_install.py
(+3 files in other folders)
